[workspace]
resolver = "3"
members = ["input", "camera", "graphics", "time"]

[workspace.dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
thiserror = "2.0.17"
winit = { version = "0.30.12", features = ["serde"] }
image = "0.25.9"
guillotiere = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
cosmic-text = { version = "0.15.0", features = ["shape-run-cache"] } #git = "https://github.com/pop-os/cosmic-text"
ordered-float = { version = "5.1.0", features = ["serde"] }
lru = "0.16.2"
glam = { version = "0.30.9", features = ["bytemuck", "mint"] }
lyon = "1.0.16"
smol_str = "0.3.4"
indexmap = "2.12.1"
slotmap = "1.1.1"
ahash = {version = "0.8.12", features = ["serde"]}
slab = "0.4.11"
rayon = "1.11.0"

[workspace.dependencies.camera]
package = "ascending_camera"
path = "./camera"
version = "0.6.0"

[workspace.dependencies.input]
package = "ascending_input" 
path = "./input"
version = "0.5.0"

[workspace.dependencies.time]
package = "ascending_time" 
path = "./time"
version = "0.1.0"

[workspace.dependencies.naga]
#git = "https://github.com/gfx-rs/wgpu"
#rev = "76003dc0035d53a474d366dcdf49d2e4d12e921f"
#branch = "cw/vulkan-swapchain"
version = "28.0.0"
features = ["wgsl-in"]

[workspace.dependencies.wgpu]
#git = "https://github.com/gfx-rs/wgpu"
#branch = "cw/vulkan-swapchain"
#rev = "061e04b"
#path = "../wgpu-trunk/wgpu"
version = "28.0.0"
