[package]
name = "ascending_camera"
version = "0.3.0"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/ascending_camera"
keywords = ["wgpu", "camera", "rendering"]
repository = "https://github.com/AscendingCreations/AscendingLibraries"
description = "A basic camera solution for Rendering"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam.workspace = true