[package]
name = "ascending_graphics"
version = "0.19.0"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/ascending_graphics"
keywords = ["wgpu", "rendering", "2d", ]
repository = "https://github.com/AscendingCreations/AscendingLibraries"
description = "A graphical rendering library for 2D, using wgpu and winit."
categories = ["game-development", "graphics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crate_passthru"]
crate_passthru = []

[dependencies]
async-trait.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
winit.workspace = true
image.workspace = true
guillotiere.workspace = true
serde.workspace = true
camera.workspace = true
input.workspace = true
log.workspace = true
cosmic-text.workspace = true
naga.workspace = true
wgpu.workspace = true
lru.workspace = true
glam.workspace = true
lyon.workspace = true
indexmap.workspace = true
ahash.workspace = true
slotmap.workspace = true
slab.workspace = true