[package]
name = "ascending_input"
version = "0.2.1"
edition = "2021"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ascending_input"
keywords = ["winit", "input", "wgpu"]
repository = "https://github.com/AscendingCreations/AscendingLibraries"
description = "This is just a basic Library to help with winit input."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float.workspace = true
serde.workspace = true
winit.workspace = true
smol_str.workspace = true
ahash.workspace = true