[package]
name = "ascending_time"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ascending_time"
keywords = ["instant", "duration", "time"]
repository = "https://github.com/AscendingCreations/AscendingLibraries"
description = "Some Time Helpers for the ascending group."
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sqlx_runtime-tokio", "sqlx_postgres", "sqlx_rustls", "enable_serde", "enable_mmap_bytey", "enable_bytey"]
enable_sqlx = ["sqlx"]
sqlx_runtime-tokio = ["enable_sqlx", "sqlx/runtime-tokio"]
sqlx_runtime-async-std = ["enable_sqlx", "sqlx/runtime-async-std"]
sqlx_native_tls = ["sqlx?/tls-native-tls"]
sqlx_rustls = ["sqlx?/tls-rustls"]
sqlx_postgres = ["sqlx?/postgres"]
enable_serde = ["serde"]
enable_mmap_bytey = ["mmap_bytey"]
enable_bytey = ["bytey"]


[dependencies]
chrono = {version = "0.4.42", features = [
  "clock",
  "serde",
  "std",
]}
bytey = { version = "0.4.0", optional = true }
mmap_bytey = { version = "0.2.0", optional = true }
sqlx = {version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "time",
], optional = true}
serde = {version = "1.0.207", optional = true}